OCMC01-74: Fix circles on mobile.

--- a/web/themes/custom/sagebootstrap/scss/components/paragraph-circle-with-custom-icon-and-text.scss
+++ b/web/themes/custom/sagebootstrap/scss/components/paragraph-circle-with-custom-icon-and-text.scss
@@ -6,12 +6,13 @@
     height: 100%;
     justify-content: center;
     align-items: center;
-    border-radius: 200px;
+    border-radius: 100%;
     background-color: #a4d5ff;
     background-image: radial-gradient(circle farthest-corner at 50% 50%, #c7eeff 41%, #a4d5ff);
     font-size: 74px;
     height: 240px;
-    margin-bottom: 34px;
+    width:240px;
+    margin: 0 auto 34px;
     i {
       color: $gray-800;
     }
